refactor: resolve circular dependency in security config and improve test configuration